cmake_minimum_required(VERSION 3.23)
project(Othuum)

add_subdirectory(IyathuumCoreLib)
add_subdirectory(SelenNavigationLib)
add_subdirectory(SuthanusPhysicsLib)
add_subdirectory(AhwassaGraphicsLib)
add_subdirectory(HaasScriptingLib)
add_subdirectory(AezeselFileIOLib)
add_subdirectory(VishalaNetworkLib)
add_subdirectory(AthanahCommonLib)
add_subdirectory(EyeOfRhianne)
add_subdirectory(IavishLobbyServer)
add_subdirectory(SuperbCommander)
#add_subdirectory(Othuum)
#add_subdirectory(UyanahGameServer)

set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT EyeOfRhianne)